--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -184,9 +184,15 @@
   }
 }
 
-html {
-  font-size: var(--font-size);
-}
+    .hide-scrollbar::-webkit-scrollbar {
+                display: none;
+              }
+
+    .hide-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+    
 
 /* Hide scrollbar for time wheel picker */
 .scrollbar-hide {
